--- a/style.css
+++ b/style.css
@@ -1,334 +1,354 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
-.header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 25rem;
-    width: 100%;
-    background-color: rgb(245, 245, 245);
+.header {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	gap: 25rem;
+	width: 100%;
 }
-.header__h2{
-    font-size: 180%;
-    font-weight: 400;
+.header__h2 {
+	font-size: 180%;
+	font-weight: 400;
+	cursor: pointer;
 }
-.header__span{
-    color: rgb(13,110,253);
+.header__span {
+	color: rgb(13, 110, 253);
 }
-.header__ul{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 2rem;
-    list-style-type: none;
-    font-size: 120%;
-    font-weight: 600;
+.header__ul {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 2rem;
+	list-style-type: none;
+	font-size: 120%;
+	font-weight: 600;
 }
-.header__current{
-    padding: 0 1vw;
-    color: rgb(13,110,253);
-    border-bottom: 2px solid rgb(13,110,253);
-    line-height: 8vh;
+.header__current {
+	color: rgb(13, 110, 253);
+	border-bottom: 2px solid rgb(13, 110, 253);
+	line-height: 8vh;
+	padding: 0 1vw;
 }
-.header__nav{
-    height: 100%;
-    width: 40%;
+.header__li {
+	padding: 0 1vw;
+	border-bottom: 2px solid transparent;
+	line-height: 8vh;
 }
-.none{
-    text-decoration: none;
-    color: black;
-    transition-property: color;
-    transition-duration: .3s;
-    transition-timing-function: ease;
+.header__nav {
+	height: 100%;
+	width: 40%;
 }
-.none:hover{
-    color: rgb(13,110,253);
+.none {
+	text-decoration: none;
+	transition-property: color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
 }
-.main{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 100%;
+.none:hover {
+	color: rgb(13, 110, 253);
 }
-.main__h1{
-    text-align: center;
-    width: 100%;
-    font-weight: 600;
-    font-size: 230%;
-    letter-spacing: .2vw;
-    margin: 4vh 25vw;
+.main {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	height: 100%;
 }
-.search{
-    margin: 0 25vw;
-    width: 100%;
-    height: 7vh;
-    padding: 0 1vw;
-    border: 1px solid rgba(13,110,253, .7);
-    border-radius: 8px;
-    -webkit-box-shadow: 0 0 5px -1.5px #000000;
-    -moz-box-shadow: 0 0 5px -1.5px #000000;
-    box-shadow: 0 0 5px -1.5px #000000;
-    transition-property: box-shadow;
-    transition-duration: .3s;
-    transition-timing-function: ease;
+.main__h1 {
+	text-align: center;
+	width: 100%;
+	font-weight: 600;
+	font-size: 230%;
+	letter-spacing: 0.2vw;
+	margin: 4vh 25vw;
 }
-.search:hover{
-    -webkit-box-shadow: 0 0 8px -1.5px #000000;
-    -moz-box-shadow: 0 0 8px -1.5px #000000;
-    box-shadow: 0 0 8px -1.5px #000000;
+.search {
+	margin: 0 25vw;
+	width: 100%;
+	height: 7vh;
+	padding: 0 1vw;
+	border: 1px solid rgba(13, 110, 253, 0.7);
+	border-radius: 8px;
+	-webkit-box-shadow: 0 0 5px -1.5px #000000;
+	-moz-box-shadow: 0 0 5px -1.5px #000000;
+	box-shadow: 0 0 5px -1.5px #000000;
+	transition-property: box-shadow;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
 }
-.content{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 7vh 8vw;
-    gap: 5vw;
+.search:hover {
+	-webkit-box-shadow: 0 0 8px -1.5px #000000;
+	-moz-box-shadow: 0 0 8px -1.5px #000000;
+	box-shadow: 0 0 8px -1.5px #000000;
 }
-.filterCon{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 25%;
-    height: fit-content;
-    gap: 4.5vh 0;
+.content {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin: 7vh 8vw;
+	gap: 5vw;
 }
-.filterCon__h2{
-    font-weight: 500;
-    font-size: 180%;
-    letter-spacing: .2vw;
+.filterCon {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 25%;
+	height: fit-content;
+	gap: 4.5vh 0;
 }
-
-.filterCon__filter{
-    display: flex;
-    border: 1px solid rgb(194, 194, 194);
-    border-radius: 14px;
-    height: 7vh;
-    padding: 0 1vw;
-    width: 100%;
-    cursor: pointer;
-    align-items: center;
-}
-.filterCon__div{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid rgb(194, 194, 194);
-    border-radius: 14px;
-    height: 7vh;
-    padding: 0 1vw;
-    cursor: pointer;
-    align-items: center;
-    width: 100%;
-}
-.filterCon__div:hover{
-    border: 1px solid rgba(13, 109, 253, .5);
-}
-.filterCon__options{
-    background-color: rgba(0, 0, 0, .1);
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    padding: 1em;
-}
-.filterCon__option{
-    border-radius: 14px;
-    cursor: pointer;
-}
-.filterCon__option:hover{
-    border: 1px solid rgba(13, 109, 253, .5);
+.filterCon__h2 {
+	font-weight: 500;
+	font-size: 180%;
+	letter-spacing: 0.2vw;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#conCharacters{
-    display: flex;
-    gap: 3vh 3vw;
-    flex-wrap: wrap;
-    width: 75%;
+.filterCon__filter {
+	display: flex;
+	border: 1px solid rgba(13, 110, 253, 0.7);
+	border-radius: 14px;
+	height: 7vh;
+	padding: 0 1vw;
+	width: 100%;
+	cursor: pointer;
+	align-items: center;
+	background-color: transparent;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
-.card{
-    flex-basis: 29%; /*esto mantiene el 29% pero las imagenes hacen que se agrende a dif del width*/
-    width: 29%;/* esto es lo que mantiene el 29% no el basis */
-    position: relative;
-    height: fit-content;
-    border: 1px solid rgba(13, 109, 253, .7);
-    border-radius: 8px;
-    -webkit-box-shadow: 0 0 5px -1.5px #000000;
-    -moz-box-shadow: 0 0 5px -1.5px #000000;
-    box-shadow: 0 0 5px -1.5px #000000;
-    cursor: pointer;
-    transition-property: transform;
-    transition-duration: .3s;
-    transition-timing-function: ease;
+.fillterCon__filter:hover {
+	background-color: transparent;
 }
-.card:hover{
-    -webkit-box-shadow: 0 0 8px -1.5px #000000;
-    -moz-box-shadow: 0 0 8px -1.5px #000000;
-    box-shadow: 0 0 8px -1.5px #000000;
-    transform: scale(1.06);
+.filterCon__filter:focus {
+	outline-width: 0cap;
+	border: 1px solid rgba(13, 110, 253, 0.7);
 }
-.card__img{
-    width: 100%;
-    border-radius:8px 8px 2px 2px;
+.filterCon__div {
+	display: flex;
+	justify-content: space-between;
+	border: 1px solid rgb(159, 159, 159);
+	border-radius: 14px;
+	height: 7vh;
+	padding: 0 1vw;
+	cursor: pointer;
+	align-items: center;
+	width: 100%;
 }
-.card__status{
-    position: absolute;
-    color: rgb(255, 255, 255);
-    border-radius: 8px;
-    padding: 2% 3%;
-    right: 0;
-    margin: 1vh .5vw;
+.filterCon__div:hover {
+	border: 1px solid rgba(13, 109, 253, 0.5);
 }
-.card__info{
-    margin: 0 .7vw;
-    overflow: hidden;
+.filterCon__options {
+	background-color: rgba(0, 0, 0, 0.1);
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	padding: 1em;
 }
-.card__h3{
-    font-size: 140%;
-    margin: 1vh 0 3vh;
-    font-weight: 600;
-    color: rgba(0, 0, 0);
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.filterCon__option {
+	border-radius: 14px;
+	cursor: pointer;
 }
-.card__span{
-    font-weight: 300;
-    font-size: 100%;
-}
-.card__h4{
-    font-size: 440%;
-    font-weight: 300;
-    margin: .5vh 0 1vh 0;
-    font-size: 115%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-.pages__ul{
-    display: flex;
-    align-items: center;
-    gap: 1vw;
-    list-style-type: none;
-}
-.pages__li{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(230, 230, 230);
-    width: 2.5vw;
-    height: 4.8vh;
-    border-radius: 8px;
-}
-.pages__button{
-    background-color: #0d6efd;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 4.5vw;
-    height: 4.8vh;
-    cursor: pointer;
-    border-radius: 8px;
+.filterCon__option:hover {
+	border: 1px solid rgba(13, 109, 253, 0.5);
 }
 
+.conCharacters {
+	display: flex;
+	gap: 3vh 3vw;
+	flex-wrap: wrap;
+	width: 75%;
+}
+.card {
+	flex-basis: 29%; /*esto mantiene el 29% pero las imagenes hacen que se agrende a dif del width*/
+	width: 29%; /* esto es lo que mantiene el 29% no el basis */
+	position: relative;
+	height: fit-content;
+	border: 1px solid rgba(13, 109, 253, 0.7);
+	border-radius: 8px;
+	-webkit-box-shadow: 0 0 5px -1.5px #000000;
+	-moz-box-shadow: 0 0 5px -1.5px #000000;
+	box-shadow: 0 0 5px -1.5px #000000;
+	cursor: pointer;
+	transition-property: transform;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
+}
+.card:hover {
+	-webkit-box-shadow: 0 0 8px -1.5px #000000;
+	-moz-box-shadow: 0 0 8px -1.5px #000000;
+	box-shadow: 0 0 8px -1.5px #000000;
+	transform: scale(1.06);
+}
+.card__img {
+	width: 100%;
+	border-radius: 8px 8px 2px 2px;
+}
+.card__status {
+	position: absolute;
+	color: rgb(255, 255, 255);
+	border-radius: 8px;
+	padding: 2% 3%;
+	right: 0;
+	margin: 1vh 0.5vw;
+}
+.card__info {
+	margin: 0 0.7vw;
+	overflow: hidden;
+}
+.card__h3 {
+	font-size: 140%;
+	color: rgba(0, 0, 0);
+	margin: 1vh 0 3vh;
+	font-weight: 600;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.card__span {
+	font-weight: 300;
+	font-size: 100%;
+}
+.card__h4 {
+	font-size: 440%;
+	font-weight: 300;
+	margin: 0.5vh 0 1vh 0;
+	font-size: 115%;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.pages__ul {
+	display: flex;
+	align-items: center;
+	gap: 1vw;
+	list-style-type: none;
+}
+.pages__li {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(230, 230, 230);
+	width: 2.5vw;
+	height: 4.8vh;
+	border-radius: 8px;
+}
+.pages__button {
+	background-color: #0d6efd;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 4.5vw;
+	height: 4.8vh;
+	cursor: pointer;
+	border-radius: 8px;
+}
 
+.visible {
+	animation-name: animateVisible;
+	animation-duration: 0.8s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: unset;
+}
+.invisible {
+	animation-name: animateVisible;
+	animation-duration: 0.8s;
+	animation-fill-mode: forwards;
+	animation-direction: reverse;
+}
+@keyframes animateVisible {
+	0% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		z-index: -1;
+	}
+	1% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		z-index: 50;
+	}
+	100% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		z-index: 50;
+	}
+}
+@keyframes animateInvisible {
+	0% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		z-index: 50;
+	}
+	1% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		z-index: 50;
+	}
+	100% {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		z-index: -1;
+		display: none;
+	}
+}
+.modal__card {
+	display: flex;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, 0.95);
+	padding: 12vw 0;
+	cursor: pointer;
+	gap: 7%;
+	color: white;
+	height: 100%;
+	font-size: 200%;
+}
+.modal__info {
+	display: flex;
+	flex-direction: column;
+}
+.modal__ul {
+	font-weight: 300;
+	list-style: none;
+	line-height: 6.5vh;
+}
+.modal__h2 {
+	flex-basis: 100vh;
+	font-weight: 500;
+}
 
-.visible{
-    animation-name: animateVisible;
-    animation-duration: .8s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: unset;
+.pointer {
+	cursor: pointer;
+	color: #0d6efd;
 }
-.invisible{
-    animation-name: animateVisible;
-    animation-duration: .8s;
-    animation-fill-mode: forwards;
-    animation-direction: reverse;
+
+.pointer:hover {
+	cursor: pointer;
+	color: rgb(0, 82, 206);
 }
-@keyframes animateVisible{
-    0%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0;
-        z-index: -1;
-    }
-    1%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0;
-        z-index: 50;
-    }
-    100%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 1;
-        z-index: 50;
-    }
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
-@keyframes animateInvisible{
-    0%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 1;
-        z-index: 50;
-    }
-    1%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0;
-        z-index: 50;
-    }
-    100%{
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        opacity: 0;
-        z-index: -1;
-        display: none;
-    }
+
+.animate-fade-1 {
+	animation: fadeIn 1s ease-in-out;
 }
-.modal__card{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(15, 15, 15, .95);
-    color: white;
-    padding: 12vw 0;
-    gap: 7%;
-    height: 100%;
-    font-size: 200%;
-}
-.modal__info{
-    display: flex;
-    flex-direction: column;
-}
-.modal__ul{
-    font-weight: 300;
-    list-style: none;
-    line-height: 6.5vh;
-}
-.modal__h2{
-    flex-basis: 100vh;
-    font-weight: 500;
-}
-.pointer:hover{
-    cursor: pointer;
-    color: rgb(255, 152, 0);
+.animate-fade-1_2 {
+	animation: fadeIn 1200ms ease-in-out;
 }
